@@ -1,6 +1,7 @@
 0.1685
-    - insert, insert_at, update, update_at can receive odd number arguments,
-      first one is parameter.
+    - insert_at, update_at, delete_at, select_at is DEPRECATED!
+      use insert, update, delete, select method and id option.
+    - insert, insert_at, update, update_at can receive odd number arguments,      first one is parameter.
 0.1684
     - added DBIx::Custom::Result all method, this is alias for fetch_hash_all
     - added DBIx::Custom::Result one method, this is alias for fetch_hash_first
